mobile alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,9 @@ h3 {
 img {
     width: 80%;
     height: 80%;
+    max-width: 300px;
+    max-height: 300px;
+    object-fit: cover;
 }
 p {
     font-size: 16px;
@@ -63,7 +66,6 @@ p {
 .column {
     float: left;
     width: 16em;
-
 }
 .left {
     text-align: right;
@@ -76,7 +78,6 @@ p {
     content: "";
     display: table;
     clear: both;
-
 }
 
 footer{
@@ -84,10 +85,49 @@ footer{
     opacity: 50%;
 }
 
-
-
-
-
-
-
-
+/* Mobile responsiveness */
+@media screen and (max-width: 768px) {
+    .row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+    
+    .column {
+        float: none;
+        width: 100%;
+        max-width: 400px;
+        margin-bottom: 20px;
+    }
+    
+    .left, .right {
+        text-align: center;
+    }
+    
+    img {
+        width: 60%;
+        height: auto;
+        max-width: 200px;
+        max-height: 200px;
+    }
+    
+    h2 {
+        font-size: 20px;
+    }
+    
+    h3 {
+        font-size: 16px;
+    }
+    
+    p {
+        font-size: 14px;
+        line-height: 1.4;
+    }
+    
+    .slide {
+        padding: 20px;
+        box-sizing: border-box;
+    }
+}
